--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
     />
     <link href="./popup.css" rel="stylesheet" />
+    <script type="text/javascript" src="./popup.js"></script>
   </head>
 
   <body>
@@ -157,6 +158,5 @@
         >www.flaticon.com</a
       >
     </div>
-    <script src="popup.js"></script>
   </body>
 </html>
