--- a/popup.html
+++ b/popup.html
@@ -2,11 +2,7 @@
 <html>
   <head>
     <title>Aqua Buddy</title>
-    <link
-      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
-    <link href="./popup.css" rel="stylesheet" />
+    <link href="./css/aqua-buddy.min.css" rel="stylesheet" />
     <script type="text/javascript" src="./popup.js"></script>
   </head>
 
