chore: made following updates * set up basic alarm * update screen shot for readme * update tag line and welcome message * added another future todo in readme

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
       >
         <div class="ml-4 flex-grow">
           <h1 class="text-lg">Aqua Buddy</h1>
-          <span class="text-xs italic">Your personal water reminder!</span>
+          <span class="text-xs italic">I'm your friend &#128153; and I'm here to help you stay hydrated!</span>
         </div>
         <img src="images/aqua-buddy-64.png" alt="Aqua Buddy" />
       </div>
